--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "nan": "^2.16.0",
+    "nan": "^2.16.0"
+  },
+  "devDependencies": {
     "tree-sitter-cli": "^0.20.6"
   }
 }
