tree-sitter in package.json

--- a/package.json
+++ b/package.json
@@ -24,5 +24,13 @@
   "repository": {
     "type": "git",
     "url": "git+https://github.com/ree-sitter/ree-sitter-apex.git"
-  }
+  },
+  "tree-sitter": [
+    {
+      "scope": "source.cls",
+      "file-types": [
+        "cls"
+      ]
+    }
+  ]
 }
